Fix colored page bottom on small screens

--- a/src/Components/HomePage/HomePage.css
+++ b/src/Components/HomePage/HomePage.css
@@ -76,6 +76,6 @@
   }
 
   .popup-button {
-    margin: 10px;
+    margin: 30px 5px;
   }
 }
